# cg

CMake/Modules/: FindGTest.cmake
examples/: CMakeLists.txt  visibility_graph.cpp
examples/convex_hull/: convex_hull.cpp
examples/exam/: CMakeLists.txt  polygons_distance.cpp  triangle_rasterization.cpp
examples/operations/: CMakeLists.txt  diameter.cpp  segment_intersects_segment.cpp  segments_intersect.cpp  simplify.cpp
examples/triangulation/: triangulation.cpp
examples/visibility/: CMakeLists.txt  shortest_path.cpp  visibility_graph_slow.cpp
include/cg/common/: range.h
include/cg/convex_hull/: andrew.h  graham.h
include/cg/exam/: polygons_distance.h  triangle_rasterization.h
include/cg/operations/: compare_dist.h  diameter.h  distance.h  orientation.h  perpendicular.h  simplify.h
include/cg/operations/contains/: circumcircle_point.h  contour_point.h  triangle_point.h
include/cg/operations/has_intersection/: rectangle_triangle.h
include/cg/operations/intersection/: segment_segment.h
include/cg/primitives/: contour.h  point.h  range.h  segment.h  triangle.h  vector.h
include/cg/triangulation/: delanay_triangulation.h  delaunay_triangulation.h
tests/: CMakeLists.txt  contains.cpp  convex_hull.cpp  delaunay_triangulation.cpp  intersection.cpp  orientation.cpp  simplify.cpp  triangle_rasterization.cpp
